syntax = "proto3";

package trueauth;

option go_package = "github.com/sirjager/trueauth/rpc";

message LogoutRequest {
    repeated string sessions = 1;  // sessions are optional if you want to target specific session or mutiple sessions seperated by comma
}

message LogoutResponse {
    string message = 1;
}
